--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,8 @@
-<div class="contentstuff">
-    <h1> Welcome :) </h1>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum eros libero, et molestie tortor volutpat sit amet. Quisque malesuada nulla ac tellus mattis ullamcorper. Sed id leo ac lorem tincidunt posuere vitae at libero. In facilisis, lectus in efficitur porta, tortor sem congue ex, ut varius dolor risus sit amet leo. Nam aliquam justo mattis, volutpat nulla ut, scelerisque erat. Nunc id felis lectus. Aliquam id massa fringilla, egestas nulla eget, dapibus ligula.  </p>
-    </div>
-    
+<h1> Welcome :) </h1>
+<p> I'm a Information System Undergraduate Student at University of São Paulo (Brazil). I'm really interested in sharing knowledge, leadership and solve problems using technology :)</p>
+
+<h3>Skills:</h3>
+<p> Git | Python | C | Java | HTML+CSS+JavaScript | NodeJS | ReactJS | Physical Computing </p>
+
+<h3>Interests:</h3>
+<p> Artificial Intelligence | Assistive Technology | Innovation | Web Development | InfoSec </p>
